--- a/app/views/station/edit/stationEditView_.jade
+++ b/app/views/station/edit/stationEditView_.jade
@@ -1,6 +1,10 @@
 .container
   h1 Редактировать станцию
-  .form(role="form")    
+  .form(role="form")
+    .form-group
+      label URL
+      input.name-input.form-control(type="text" value=station.name)
+
     .form-group
       label Название
       input.title-input.form-control(type="text" value=station.title)
@@ -8,17 +12,21 @@
     .form-group
       label Подзаголовок
       input.subtitle-input.form-control(type="text" value=station.subtitle)
-    
+
     .form-group
-      label 
-        | Как забрать фотографию? 
+      label Дополнительный хештег для печати только на этой станции
+      input.hashtag-input.form-control(type="text" value=station.hashtag)
+
+    .form-group
+      label
+        | Как забрать фотографию?
         small (Поддерживает Markdown)
       textarea.instructions-input.form-control(rows="6" text=station.description)
         =station.instructions
 
     .form-group
-      label 
-        |Описание 
+      label
+        |Описание
         small (Поддерживает Markdown)
       textarea.desc-input.form-control(rows="12" text=station.description)
         =station.description
